data/derived/fa15/progs/unify/prog1800.ml.out
Characters 24-42:
  let rec digitsOfInt n = (digitsOfInt n/10)@[n mod 10];;
                          ^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
